--- a/project_1/style.css
+++ b/project_1/style.css
@@ -75,8 +75,8 @@ button{
 
 button:hover{
     background-color: #ccc;
-    border: 2px solid red;
-    color:white;
+    border: 2px solid rgb(7, 7, 7);
+    color:rgb(4, 4, 4);
     transition: 0.3s ease-out;
     cursor: pointer;
 }
